--- a/05_HelloFPS/Framework/Makefile
+++ b/05_HelloFPS/Framework/Makefile
@@ -3,7 +3,7 @@ FLAGS = -Wall
 LIBS = 
 FRAMEWORKS = 
 TARGET = libFramework.a
-OBJ = BufferObject.o GUIElement.o TextureAtlas.o Label.o IObject.o IEventHandler.o Application.o File.o Mesh.o TmpMesh.o Program.o Shader.o VertexArray.o Perspective.o Camera.o
+OBJ = BufferObject.o GUIElement.o TextureAtlas.o IObject.o IEventHandler.o Application.o File.o Mesh.o TmpMesh.o Program.o Shader.o VertexArray.o Perspective.o Camera.o
 DOBJ = Error.o
 
 .PHONY:
@@ -11,7 +11,6 @@ $(TARGET): $(DOBJ)
 	cd OBJ; $(CC) -g -c *.cpp; mv *.o ..
 	cd GL; $(CC) -g -c *.cpp; mv *.o ..
 	cd APP; $(CC) -g -c *.cpp; mv *.o ..
-	cd UI; $(CC) -g -c *.cpp; mv *.o ..
 	ar -rcs $(TARGET) $(OBJ) $(DOBJ)
 	rm *.o 								
 	
