Practice 01: does now work with ubuntu

--- a/01_HelloTriangle/Makefile
+++ b/01_HelloTriangle/Makefile
@@ -1,14 +1,14 @@
 CC = g++
 FLAGS = -Wall
-LIBS = -lGLEW libFramework.a
-FRAMEWORKS = -framework OpenGL -framework SDL2
+LIBS = libFramework.a -lGLEW -lGL -lGLU -lSDL2 
+FRAMEWORKS =
 TARGET = HelloTriangle
-OBJ = Triangle.o 
+OBJ = Triangle.o
 
 .PHONY:
 $(TARGET): Main.cpp $(OBJ)
 	cd Framework;make;cp libFramework.a ..
-	$(CC) -o $(TARGET) Main.cpp $(OBJ) $(FLAGS) $(LIBS) $(FRAMEWORKS) 
+	$(CC) -o $(TARGET) Main.cpp  $(OBJ)  $(LIBS) $(FLAGS) 
 	rm *.o
 
 %.o: %.cpp
